--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,22 @@
+@import url(https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap);
+
+/*!
+
 /* Add custom CSS for the sticky navbar */
 .sticky-top {
     position: sticky;
     top: 0;
-    z-index: 1000; /* Adjust the z-index as needed */
-}
-/* Checkbox and label inline  */
-.form-check-input {
-margin-right: 0px !important;
+    z-index: 1000;
+    /* Adjust the z-index as needed */
 }
 
+/* Checkbox and label inline  */
+.form-check-input {
+    margin-right: 0px !important;
+}
+
+body {
+    font-family: Quicksand,sans-serif;
+
+}
