--- a/css/styles.css
+++ b/css/styles.css
@@ -29,3 +29,37 @@ body {
 .bigger-text span {
     display: block; /* Each word on a new line */
 }
+
+/* media queries */
+
+.hero-section {
+    text-align: left !important;
+}
+.featured-section{
+    text-align: left !important;
+}
+
+
+.img-right-corner{
+    border-radius: 0px 50px 0px 0px;
+}
+.text-left-corner {
+    border-radius: 0px 0px 0px 50px;
+}
+/* responsive, form small screens, use 13px font size */
+@media (max-width: 992px) {
+    .hero-section {
+        text-align: center !important;
+    }
+    .featured-section{
+        text-align: center !important;
+        margin-top: 17pt;
+    }
+    .img-right-corner{
+        border-radius: 0px 0px 0px 00px;
+    }
+    .text-left-corner {
+        border-radius: 0px 0px 0px 00px;
+    }
+}
+/* end media queries */
