--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,10 @@ body {
 }
 /* responsive, form small screens, use 13px font size */
 @media (max-width: 992px) {
+    .bigger-text {
+        font-size: 3rem;
+        white-space: nowrap;
+    }
     .hero-section {
         text-align: center !important;
     }
@@ -60,6 +64,9 @@ body {
     }
     .text-left-corner {
         border-radius: 0px 0px 0px 00px;
+    }
+    .mt-5 {
+        margin-top: 0rem!important;
     }
 }
 /* end media queries */
